--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "tauri":"tauri",
-
+    "tauri": "tauri",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,7 +13,8 @@
     "@tauri-apps/api": "^1.5.3",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.10",
